# jarman

./: .agignore  .dir-locals.el  .gitignore  .ignore  LICENSE  README.md  agenda.org  agenda.org_done  index.org  org-mode-links.md  temp.org  test.el
.ci/: Makefile
.github/workflows/: clojure.yml
Lvlups/Aleks/: Aleks-orgmode-lvlup.org
Project work versions/: FTP.org  businass.org  expression.html  jarman.kra
Project work versions/plugin mechanism/: plugin system.kra
Projektowanie/: State logic in gui plugins.jpg~  State logic in gui plugins.kra  State logic in gui plugins.kra~  b-plan.org  businass.org  expression.org  jarman.kra~  racoon.kra
Projektowanie/WeekPlanner/: dayplannercomponent.org
archive/: project-files.7z
docs/: Makefile
docs/coffee/: Lavazza-Crema-e-Gusto-Dolce-250g-kawa-mielona.jfif  Lavazza-Qualita-Rossa-250g-Wloska-kawa-mielona.jfif
docs/el/: publish-agenda-remote.el  publish-manual-local.el  publish-site-local.el  publish-site-remote.el
docs/internal/: howto-graphics.org  (+1 more)
el/: tools.el
installer/: .gitignore  Cargo.toml  README.org  launch4j.xml  setup-client.iss
installer-rust/: .gitignore
installer/src/: main.rs
installer/src/frontend/: app.js  styles.css
installer/src/tools/: files.rs  mod.rs  package.rs  unziper.rs
issues/: t_01.org  t_02.org
jarman/: .gitignore  .jarman  Makefile  build.ps1  config-backup.7z  config.7z  female_names_pl.csv  male_names_pl.csv  project.clj  q  some.edn
security/: private-key.pem  private-passphrase-key.pem  public-key.pem
transact/: .jarman  .jarman.data.clj
(+453 files in other folders)
