[package]
name = "installer"
version = "0.0.1"
authors = ["RiSer <sergiy19981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.5.1"
web-view = "0.6.3"
ftp = "3.0.1"
zip = "0.5.6"
regex = "1.3.9"
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

